@@ -9,6 +9,7 @@ Version 0.6.0~dev
 	* Add set_timecode method to ffmpeg worker.
 	* Support demuxing in ffmpeg worker.
 	* Remove dependency on sjfs from manzanita rewrap action, closes: #5758.
+	* Refactor manzanita rewrap action and remove dependency over mediaparser.
 
 Version 0.5.0 Released on 2012/03/29
 
